--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,13 @@
     <title>To-do App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1 class="text-center">To-do App</h1>
+    <div class="border-4" id="add-to-list">
+      <div id="taskDisplay"></div>
+      <button>Add to List</button>
+    </div>
+    <div id="show-list"></div>
+    <div id="other-lists"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
