--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-do App</title>
+    <title>AOI</title>
   </head>
   <body>
-    <h1 class="text-center">To-do App</h1>
-    <div class="border-4" id="add-to-list">
-      <div id="taskDisplay"></div>
-      <button>Add to List</button>
-    </div>
-    <div id="show-list"></div>
-    <div id="other-lists"></div>
+    <div class="h-screen flex justify-evenly ">
+    <div class="border-4 border-blue-100 h-full w-1/4 p-3 shadow-2xl shadow-blue-700 rounded-3xl">
+    <h1 class=" text-xl text-center">Task Bank</h1><div class=" m-3 border-2 border-blue-200 h-1/6"></div></div>
+    <div class="border-4 border-blue-100 w-1/4 h-full p-3 shadow-2xl  shadow-blue-700 rounded-3xl">
+      <h1 class=" text-xl text-center">Current Task</h1></div>
+      <div class="border-4 border-blue-100 w-1/4 h-full p-3 shadow-2xl  shadow-blue-700 rounded-3xl">
+        <h1 class=" text-xl text-center">Add a Task</h1>
+        <div class=" m-5 h-auto flex flex-col">
+          <input type="text" placeholder="Task Name" class="mb-2">
+          <input type="date" class="mb-2">
+          <input type="text" placeholder="Task 1" class="mb-2">
+          <input type="text" placeholder="Details" class="mb-2">
+          <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded">Create Task</button>
+        </div>
+      </div>
+      </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
