--- a/index.html
+++ b/index.html
@@ -8,18 +8,33 @@
   </head>
   <body>
     <div class="mt-5 h-auto flex justify-center">
-      <div class="border-4 border-blue-100 w-6/12 p-3 shadow-lg  shadow-blue-700 rounded-3xl">
-        <h1 class=" text-xl text-center">Aoi</h1>
-        <section class=" m-5  flex flex-col">
-          <input type="text" id="taskNameInput" placeholder="Task Name" class="mb-3">
-          <input type="text" id="task-details" placeholder="Details" class="mb-3">
-          <button class="mt-4 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded">Create Task</button>
+      <div
+        class="border-4 border-blue-100 w-6/12 p-3 shadow-lg shadow-blue-700 rounded-3xl"
+      >
+        <h1 class="text-xl text-center">Aoi</h1>
+        <section class="m-5 flex flex-col">
+          <input
+            type="text"
+            id="task-name"
+            placeholder="Task Name"
+            class="mb-3"
+          />
+          <input
+            type="text"
+            id="task-details"
+            placeholder="Details"
+            class="mb-3"
+          />
+          <button
+            onclick="addTask()"
+            class="mt-4 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded"
+          >
+            Create Task
+          </button>
         </section>
-        <section id="task-container" class="border-2 m-5 w-auto">
-      </section>
+        <section id="task-container" class="border-2 m-5 w-auto"></section>
       </div>
-      
-      </div>
-    <script type="module" src="/src/main.ts"></script>
+    </div>
+    <script defer src="/src/main.js"></script>
   </body>
 </html>
