ts added to html page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         <section id="task-container" class="border-2 m-5 w-auto"></section>
       </div>
     </div>
-    <script defer src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
