event listener added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             class="mb-3"
           />
           <button
-            onclick="addTask()"
+          id="button"
             class="mt-4 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded"
           >
             Create Task
@@ -35,6 +35,6 @@
         <section id="task-container" class="border-2 m-5 w-auto"></section>
       </div>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
